--- a/etiqueta.css
+++ b/etiqueta.css
@@ -25,6 +25,13 @@
 	width: 100%; 
 	height: 100%; 
 	background-color: #fff;
+	box-shadow: inset 0px 0px 0px 1px;
+	/* align in center and middle */
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+
 }
 .no-print{
 	position: absolute;
